Creado mediante Colaboratory

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "6bfd4342",
       "metadata": {
         "id": "6bfd4342",
@@ -198,6 +198,7 @@
     {
       "cell_type": "code",
       "source": [
+        "print('hi',json.loads(response.text))\n",
         "print('hi',json.loads(response.text))"
       ],
       "metadata": {
@@ -209,7 +210,7 @@
         }
       },
       "id": "_6S728iIyWik",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
