Creado mediante Colaboratory

--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -25,7 +25,9 @@
         "* Modulos\n",
         "\n",
         "En el siguiente tema vamos a utilizar algunos paquetes o librerias existentes en python, como ejemplo vamos a conectarnos a servicios externos llamados APIs estos servicios nos permiten extraer información y procesarla desde nuestro código.\n",
-        "https://dillinger.io todos los ejemplos de markdown vienen en esta pagina."
+        "https://dillinger.io todos los ejemplos de markdown vienen en esta pagina.\n",
+        "\n",
+        "$5x^2 + 3x $"
       ]
     },
     {
